@@ -66,7 +66,6 @@ public:
         INVALID_TAB_VALUE,
         INVALID_DIRECTORY,
         INVALID_AT_FILE,
-        UNTERMINATED_QUOTE,
         NESTED_AT_FILE,
         UNSUPPORTED_ENCODING,
         UNSUPPORTED_OPTION,
